@@ -79,41 +79,41 @@ add3rdmousepopupmenu(.rqda$.fnames_rqda, AddFileToCaseMenu)
   
   
   addHandlerClicked(.rqda$.codes_rqda,handler <- function(h,...){
-            if (is_projOpen(env=.rqda,conName="qdacon")){
-    CodeNamesUpdate(CodeNamesWidget=.rqda$.codes_rqda)
-    con <- .rqda$qdacon
-    SelectedCode <- currentCode <- svalue(.rqda$.codes_rqda)
-    if (length(SelectedCode)!=0) {
-    Encoding(SelectedCode) <- Encoding(currentCode) <- "UTF-8"
-    currentCid <- dbGetQuery(con,sprintf("select id from freecode where name=='%s'",SelectedCode))[,1]
-    SelectedFile <- tryCatch(svalue(.rqda$.root_edit)  ## use root_edit is more reliable
-                             ,error=function(e){})
-    if (!is.null(SelectedFile)) {
-      Encoding(SelectedFile) <- "UTF-8"
-      currentFid <-  dbGetQuery(con,sprintf("select id from source where name=='%s'",SelectedFile))[,1]
-      ## following code: Only mark the text chuck according to the current code.
-      tryCatch({
-        widget <- get(h$action$marktxtwidget,.rqda)
+    if (is_projOpen(env=.rqda,conName="qdacon")){
+      ## CodeNamesUpdate(CodeNamesWidget=.rqda$.codes_rqda)
+      con <- .rqda$qdacon
+      SelectedCode <- currentCode <- svalue(.rqda$.codes_rqda)
+      if (length(SelectedCode)!=0) {
+        Encoding(SelectedCode) <- Encoding(currentCode) <- "UTF-8"
+        currentCid <- dbGetQuery(con,sprintf("select id from freecode where name=='%s'",SelectedCode))[,1]
+        SelectedFile <- tryCatch(svalue(.rqda$.root_edit)  ## use root_edit is more reliable
+                                 ,error=function(e){})
+        if (!is.null(SelectedFile)) {
+          Encoding(SelectedFile) <- "UTF-8"
+          currentFid <-  dbGetQuery(con,sprintf("select id from source where name=='%s'",SelectedFile))[,1]
+          ## following code: Only mark the text chuck according to the current code.
+          tryCatch({
+            widget <- get(h$action$marktxtwidget,.rqda)
         ## if widget is not open, then error;which means no need to highlight anything.
-        sel_index <-  dbGetQuery(con,sprintf("select selfirst, selend from coding where
+            sel_index <-  dbGetQuery(con,sprintf("select selfirst, selend from coding where
                                                    cid==%i and fid==%i and status==1",currentCid, currentFid))
-        Maxindex <- dbGetQuery(con, sprintf("select max(selend) from coding where fid==%i", currentFid))[1,1]
-        ClearMark(widget,min=0,max=Maxindex)
+            Maxindex <- dbGetQuery(con, sprintf("select max(selend) from coding where fid==%i", currentFid))[1,1]
+            ClearMark(widget,min=0,max=Maxindex)
         if (nrow(sel_index)>0){
-          HL(widget,index=sel_index)}
-      },error=function(e){}) # end of mark text chuck
-    }
-  }
-  }},action=list(marktxtwidget=".openfile_gui")
+          HL(widget,index=sel_index,fore.col=NULL,back.col=.rqda$back.col)}
+          },error=function(e){}) # end of mark text chuck
+        }
+      }
+    }},action=list(marktxtwidget=".openfile_gui")
                     )
+  
 
-
-  addHandlerMouseMotion(.rqda$.CasesNamesWidget, handler <- function(h, ...) {
-    if (is_projOpen(env = .rqda, conName ="qdacon",message = FALSE)) {
-       CaseNamesUpdate(.rqda$.CasesNamesWidget)
-    }
-  }
-                        )
+##  addHandlerMouseMotion(.rqda$.CasesNamesWidget, handler <- function(h, ...) {
+##    if (is_projOpen(env = .rqda, conName ="qdacon",message = FALSE)) {
+##       CaseNamesUpdate(.rqda$.CasesNamesWidget)
+##    }
+##  }
+##                        )
   
 
 
@@ -136,9 +136,9 @@ add3rdmousepopupmenu(.rqda$.fnames_rqda, AddFileToCaseMenu)
         sel_index <-  dbGetQuery(con,sprintf("select selfirst, selend from caselinkage where
                                                    caseid==%i and fid==%i and status==1",currentCid, currentFid))
         Maxindex <- dbGetQuery(con, sprintf("select max(selend) from caselinkage where fid==%i", currentFid))[1,1]
-        ClearMark(widget,min=0,max=Maxindex)
+        ClearMark(widget,min=0,max=Maxindex,clear.fore.col=FALSE,clear.back.col=TRUE)
         if (nrow(sel_index)>0){
-          HL(widget,index=sel_index)}
+          HL(widget,index=sel_index,fore.col=NULL,back.col=.rqda$back.col)}
       },error=function(e){}) # end of mark text chuck
     }
   }
@@ -164,6 +164,8 @@ add3rdmousepopupmenu(.rqda$.CasesNamesWidget, CaseNamesWidgetMenu)
 ## popup menu by right-click on CaseNamesWidget
 
 addhandlerclicked(.rqda$.CasesNamesWidget, handler <- function(h,...) {UpdateFileofCaseWidget()})
+
+add3rdmousepopupmenu(.rqda$.FileofCase, FileofCaseWidgetMenu)
 
 addhandlerdoubleclick(.rqda$.FileofCase, handler <- function(h,...) {
 ViewFileFun(FileNameWidget=.rqda$.FileofCase)
