@@ -8,5 +8,9 @@ Merge *rqda from different coders.
 
 inter-coder reliability 
 
+f-cat and c-cat memo
+
+unmark button in Cases Tab
+
 ### less important
 should add document on the table structure.
